--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-.DS_Store
+# Windows
 node_modules/
 .idea/
 .vscode/
 project.config.json
+[Dd]esktop.ini
+Thumbs.db
+$RECYCLE.BIN/
+
+# macOS
+.DS_Store
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+
+# Node.js
+node_modules/
